# ONT-Nexus

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/application/dto/: execution_test_request.py
app/application/event_bus/: bus.py  events.py
app/application/services/: device_detection_service.py  result_evaluator.py  software_update_evaluator.py  software_update_provider.py  station_service.py  treshold_provider.py
app/infrastructure/config/: settings.py
app/infrastructure/logging/: logger.py
app/infrastructure/network/: arp_scanner.py  ping_service.py
app/infrastructure/selenium/: browser_options.py  driver_factory.py  selenium_session.py
app/infrastructure/vendors/base/: navigator_base.py  test_runner_base.py
app/infrastructure/vendors/fiberhome/: fiberhome_adapter.py  fiberhome_navigator.py  fiberhome_test_runner.py
app/shared/: constants.py
app/shared/wifi/: windows_rssi.py
app/startup/: bootstrap_runtime.py
app/ui/: app.py  bootstrap_worker.py  loading_screen.py  main_window.py  theme_manager.py
app/ui/data/: modificar_mock_data.json  reportes_data.py
app/ui/styles/: dashboard_theme.py  theme.py
app/ui/views/: dashboard_view.py  modificar.py  reportes.py  status_bar.py  testeo.py  theme_panel.py  toolbar_view.py
app/ui/widgets/: buttons.py  confirm_dialog.py  theme_toggle.py  toggle_switch.py
app/workers/: connection_monitor.py  port_worker.py  slot_connection_monitor.py  supervisor.py  worker_context.py
data/config/: app_settings.yaml  station_map.yaml
scripts/: dev_ui_bus_demo.py
