[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ont_nexus"
version = "0.1.0"
description = "Versión masiva del ONT Tester para pruebas concurrentes de múltiples equipos."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "NextGen IT Consulting" }
]
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]